rapihin file gambar

--- a/coba coba coba.html
+++ b/coba coba coba.html
@@ -133,12 +133,12 @@
 
   <section class="faculty-grid">
     <div class="faculty-item" onclick="showPopup(['makara-fib-1.png', 'makara-fib-2.png'])">
-      <img src="makara-fib.png" alt="FIB">
-      <p>Fakultas Ilmu Pengetahuan Budaya</p>
+      <img src="makara-ui.png" alt="ui">
+      <p>UNIVERSITAS INDONESIA</p>
     </div>
     <div class="faculty-item" onclick="showPopup(['makara-fmipa-1.png', 'makara-fmipa-2.png'])">
-      <img src="makara-fmipa.png" alt="FMIPA">
-      <p>Fakultas Matematika dan IPA</p>
+      <img src="makara-fib.png" alt="FIB">
+      <p>Fakultas Ilmu Budaya</p>
     </div>
     <div class="faculty-item" onclick="showPopup(['makara-ft-1.png', 'makara-ft-2.png'])">
       <img src="makara-ft.png" alt="FT">
