--- a/coba coba coba.html
+++ b/coba coba coba.html
@@ -133,39 +133,39 @@
 
   <section class="faculty-grid">
     <div class="faculty-item" onclick="showPopup(['makara-fib-1.png', 'makara-fib-2.png'])">
-      <img src="makara-ui.png" alt="ui">
+      <img src="makara/makara-ui.png" alt="ui">
       <p>UNIVERSITAS INDONESIA</p>
     </div>
     <div class="faculty-item" onclick="showPopup(['makara-fmipa-1.png', 'makara-fmipa-2.png'])">
-      <img src="makara-fib.png" alt="FIB">
+      <img src="makara/makara-fib.png" alt="FIB">
       <p>Fakultas Ilmu Budaya</p>
     </div>
     <div class="faculty-item" onclick="showPopup(['makara-ft-1.png', 'makara-ft-2.png'])">
-      <img src="makara-ft.png" alt="FT">
-      <p>Fakultas Teknik</p>
+      <img src="makara/makara-fmipa.png" alt="FMIPA">
+      <p>Fakultas Matematika dan Ipa</p>
     </div>
     <div class="faculty-item" onclick="showPopup(['makara-feb-1.png', 'makara-feb-2.png'])">
-      <img src="makara-feb.png" alt="FEB">
+      <img src="makara/makara-feb.png" alt="FEB">
       <p>Fakultas Ekonomi dan Bisnis</p>
     </div>
     <div class="faculty-item" onclick="showPopup(['makara-fpsi-1.png', 'makara-fpsi-2.png'])">
-      <img src="makara-fpsi.png" alt="FPSI">
+      <img src="makara/makara-fpsi.png" alt="FPSI">
       <p>Fakultas Psikologi</p>
     </div>
     <div class="faculty-item" onclick="showPopup(['makara-fisip-1.png', 'makara-fisip-2.png'])">
-      <img src="makara-fisip.png" alt="FISIP">
+      <img src="makara/makara-fisip.png" alt="FISIP">
       <p>Fakultas Ilmu Sosial dan Ilmu Politik</p>
     </div>
     <div class="faculty-item" onclick="showPopup(['makara-fk-1.png', 'makara-fk-2.png'])">
-      <img src="makara-fk.png" alt="FK">
+      <img src="makara/makara-fk.png" alt="FK">
       <p>Fakultas Kedokteran</p>
     </div>
     <div class="faculty-item" onclick="showPopup(['makara-fkm-1.png', 'makara-fkm-2.png'])">
-      <img src="makara-fkm.png" alt="FKM">
+      <img src="makara/makara-fkm.png" alt="FKM">
       <p>Fakultas Kesehatan Masyarakat</p>
     </div>
     <div class="faculty-item" onclick="showPopup(['makara-fasilkom-1.png', 'makara-fasilkom-2.png'])">
-      <img src="makara-fasilkom.png" alt="FASILKOM">
+      <img src="makara/makara-fasilkom.png" alt="FASILKOM">
       <p>Fakultas Ilmu Komputer</p>
     </div>
   </section>
