--- a/coba coba coba.html
+++ b/coba coba coba.html
@@ -129,8 +129,7 @@
 </head>
 <body>
   <h1>Makara Fakultas Universitas Indonesia</h1>
-  <p>Klik salah satu ikon untuk melihat gambar makara fakultas.</p>
-
+  
   <section class="faculty-grid">
     <div class="faculty-item" onclick="showPopup(['makara-fib-1.png', 'makara-fib-2.png'])">
       <img src="makara/makara-ui.png" alt="ui">
@@ -153,8 +152,8 @@
       <p>Fakultas Psikologi</p>
     </div>
     <div class="faculty-item" onclick="showPopup(['makara-fisip-1.png', 'makara-fisip-2.png'])">
-      <img src="makara/makara-fisip.png" alt="FISIP">
-      <p>Fakultas Ilmu Sosial dan Ilmu Politik</p>
+      <img src="makara/makara-fh.png" alt="FH">
+      <p>Fakultas Hukumk</p>
     </div>
     <div class="faculty-item" onclick="showPopup(['makara-fk-1.png', 'makara-fk-2.png'])">
       <img src="makara/makara-fk.png" alt="FK">
