--- a/coba coba coba.html
+++ b/coba coba coba.html
@@ -67,8 +67,8 @@
 
     .popup-content {
       position: relative;
-      max-width: 90%;
-      max-height: 90%;
+      max-width: 70%;
+      max-height: 70%;
       text-align: center;
     }
 
@@ -131,7 +131,7 @@
   <h1>Makara Fakultas Universitas Indonesia</h1>
   
   <section class="faculty-grid">
-    <div class="faculty-item" onclick="showPopup(['makara-fib-1.png', 'makara-fib-2.png'])">
+    <div class="faculty-item" onclick="showPopup(['Hantu/JALAN CINTA-HANTU.png', 'makara-fib-2.png'])">
       <img src="makara/makara-ui.png" alt="ui">
       <p>UNIVERSITAS INDONESIA</p>
     </div>
@@ -151,7 +151,7 @@
       <img src="makara/makara-fpsi.png" alt="FPSI">
       <p>Fakultas Psikologi</p>
     </div>
-    <div class="faculty-item" onclick="showPopup(['makara-fisip-1.png', 'makara-fisip-2.png'])">
+    <div class="faculty-item" onclick="showPopup(['Hantu/HUKUM-HANTU.png', 'makara-fisip-2.png'])">
       <img src="makara/makara-fh.png" alt="FH">
       <p>Fakultas Hukumk</p>
     </div>
