masukin foro ke gallery

--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@
         }
 
         .gallery img {
-            width: 200px;
-            height: auto;
+            width: 350px;
+            height: 350px;
             margin: 5px;
             border-radius: 10px;
         }
@@ -434,11 +434,11 @@
         }
 
         .slide-btn.left {
-            left: 5%;
+            left: 10%;
         }
 
         .slide-btn.right {
-            right: 5%;
+            right: 10%;
         }
 
         .slide-btn:hover {
@@ -860,13 +860,16 @@
     <div class="gallery-slider">
         <button class="slide-btn left" onclick="slideLeft()">&#9664;</button>
         <div class="gallery">
-            <img src="https://via.placeholder.com/200" alt="Image 1">
-            <img src="https://via.placeholder.com/200" alt="Image 2">
-            <img src="https://via.placeholder.com/200" alt="Image 3">
-            <img src="https://via.placeholder.com/200" alt="Image 4">
-            <img src="https://via.placeholder.com/200" alt="Image 5">
-            <img src="https://via.placeholder.com/200" alt="Image 6">
-            <img src="https://via.placeholder.com/200" alt="Image 7">
+            <img src="gallery/asrama.jpg" alt="Image 1">
+            <img src="gallery/bagian gallery.jpeg" alt="Image 2">
+            <img src="gallery/Bagian gallery.jpg" alt="Image 3">
+            <img src="gallery/Bagian gallery_(1).jpg" alt="Image 4">
+            <img src="gallery/Bagian gallery_(2).jpg" alt="Image 5">
+            <img src="gallery/Bagian galleryy_.jpg" alt="Image 6">
+            <img src="gallery/keluaran-kutek_.jpg" alt="Image 7">
+            <img src="gallery/st-ui  (1).jpg" alt="Image 7">
+            <img src="gallery/keluaran-kutek_.jpg" alt="Image 7">
+            <img src="gallery/psj.jpg" alt="Image 7">
         </div>
         <button class="slide-btn right" onclick="slideRight()">&#9654;</button>
     </div>
