rapihin foto di gallery

--- a/index.html
+++ b/index.html
@@ -860,16 +860,17 @@
     <div class="gallery-slider">
         <button class="slide-btn left" onclick="slideLeft()">&#9664;</button>
         <div class="gallery">
-            <img src="gallery/asrama.jpg" alt="Image 1">
-            <img src="gallery/bagian gallery.jpeg" alt="Image 2">
-            <img src="gallery/Bagian gallery.jpg" alt="Image 3">
-            <img src="gallery/Bagian gallery_(1).jpg" alt="Image 4">
-            <img src="gallery/Bagian gallery_(2).jpg" alt="Image 5">
-            <img src="gallery/Bagian galleryy_.jpg" alt="Image 6">
-            <img src="gallery/keluaran-kutek_.jpg" alt="Image 7">
-            <img src="gallery/st-ui  (1).jpg" alt="Image 7">
-            <img src="gallery/keluaran-kutek_.jpg" alt="Image 7">
-            <img src="gallery/psj.jpg" alt="Image 7">
+            <img src="gallery/hutan ui.jpg">
+            <img src="gallery/menara air.jpg">
+            <img src="gallery/area parkir bikun.jpg">
+            <img src="gallery/jembatan teksas.jpeg">
+            <img src="gallery/balairung.jpg">
+            <img src="gallery/KENANGA.jpg">
+            <img src="gallery/st-ui  (1).jpg">
+            <img src="gallery/asrama.jpg">
+            <img src="gallery/jalan cinta.jpg">
+            <img src="gallery/psj.jpg">
+            <img src="gallery/jalan setapak.jpg">
         </div>
         <button class="slide-btn right" onclick="slideRight()">&#9654;</button>
     </div>
