--- a/index.html
+++ b/index.html
@@ -861,17 +861,17 @@
     <div class="gallery-slider">
         <button class="slide-btn left" onclick="slideLeft()">&#9664;</button>
         <div class="gallery">
-            <img src="hutan ui.jpg">
-            <img src="menara air.jpg">
-            <img src="area parkir bikun.jpg">
-            <img src="jembatan teksas.jpeg">
-            <img src="balairung.jpg">
-            <img src="KENANGA.jpg">
-            <img src="st-ui  (1).jpg">
-            <img src="asrama.jpg">
-            <img src="jalan cinta.jpg">
-            <img src="psj.jpg">
-            <img src="jalan setapak.jpg">
+            <img src="gallery/hutan ui.jpg">
+            <img src="gallery/menara air.jpg">
+            <img src="gallery/area parkir bikun.jpg">
+            <img src="gallery/jembatan teksas.jpeg">
+            <img src="gallery/balairung.jpg">
+            <img src="gallery/KENANGA.jpg">
+            <img src="gallery/st-ui  (1).jpg">
+            <img src="gallery/asrama.jpg">
+            <img src="gallery/jalan cinta.jpg">
+            <img src="gallery/psj.jpg">
+            <img src="gallery/jalan setapak.jpg">
         </div>
         <button class="slide-btn right" onclick="slideRight()">&#9654;</button>
     </div>
