iseng nyoba foto makara

--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
   
 <section class="faculty-grid">
   <div class="faculty-item" onclick="showPopup(['Hantu/JALAN CINTA-HANTU.png', 'makara-fib-2.png'])">
-    <img src="makara/makara-ui.png" alt="ui">
+    <img src="makara-ui.png" alt="ui">
     <p>UNIVERSITAS INDONESIA</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-vokasi-1.png', 'makara-vokasi-2.png'])">
