--- a/index.html
+++ b/index.html
@@ -707,67 +707,67 @@
   
 <section class="faculty-grid">
   <div class="faculty-item" onclick="showPopup(['Hantu/JALAN CINTA-HANTU.png', 'makara-fib-2.png'])">
-    <img src="makara-ui.png" alt="ui">
+    <img src="Makara/makara-ui.png" alt="ui">
     <p>UNIVERSITAS INDONESIA</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-vokasi-1.png', 'makara-vokasi-2.png'])">
-    <img src="makara/makara-vokasi.png" alt="VOKASI">
+    <img src="Makara/makara-vokasi.png" alt="VOKASI">
     <p>Program Pendidikan Vokasi</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-fmipa-1.png', 'makara-fmipa-2.png'])">
-    <img src="makara/makara-fib.png" alt="FIB">
+    <img src="Makara/makara-fib.png" alt="FIB">
     <p>Fakultas Ilmu Budaya</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-fisip-1.png', 'makara-fisip-2.png'])">
-    <img src="makara/image 10.png" alt="FISIP">
+    <img src="Makara/image 10.png" alt="FISIP">
     <p>Fakultas Ilmu Sosial dan Politik</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['Hantu/HUKUM-HANTU.png', 'makara-fisip-2.png'])">
-    <img src="makara/makara-fh.png" alt="FH">
+    <img src="Makara/makara-fh.png" alt="FH">
     <p>Fakultas Hukum</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-ft-1.png', 'makara-ft-2.png'])">
-    <img src="makara/makara-ft.png" alt="FAKULTAS TEKNIK">
+    <img src="Makara/makara-ft.png" alt="FAKULTAS TEKNIK">
     <p>Fakultas Teknik</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-fasilkom-1.png', 'makara-fasilkom-2.png'])">
-    <img src="makara/makara-fasilkom.png" alt="FASILKOM">
+    <img src="Makara/makara-fasilkom.png" alt="FASILKOM">
     <p>Fakultas Ilmu Komputer</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-ft-1.png', 'makara-ft-2.png'])">
-    <img src="makara/makara-fmipa.png" alt="FMIPA">
+    <img src="Makara/makara-fmipa.png" alt="FMIPA">
     <p>Fakultas Matematika dan Ipa</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-fk-1.png', 'makara-fk-2.png'])">
-    <img src="makara/makara-fk.png" alt="FK">
+    <img src="Makara/makara-fk.png" alt="FK">
     <p>Fakultas Kedokteran</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-fkg-1.png', 'makara-fkg-2.png'])">
-    <img src="makara/fkg.png" alt="FKG">
+    <img src="Makara/fkg.png" alt="FKG">
     <p>Fakultas Kedokteran Gigi</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-ff-1.png', 'makara-ff-2.png'])">
-    <img src="makara/makara-farmasi.png" alt="FARMASI">
+    <img src="Makara/makara-farmasi.png" alt="FARMASI">
     <p>Fakultas Farmasi</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-fik-1.png', 'makara-fik-2.png'])">
-    <img src="makara/makara-ui-fik.png" alt="FIK">
+    <img src="Makara/makara-ui-fik.png" alt="FIK">
     <p>Fakultas Ilmu Keperawatan</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-fpsi-1.png', 'makara-fpsi-2.png'])">
-    <img src="makara/makara-fpsi.png" alt="FPSI">
+    <img src="Makara/makara-fpsi.png" alt="FPSI">
     <p>Fakultas Psikologi</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-feb-1.png', 'makara-feb-2.png'])">
-    <img src="makara/makara-feb.png" alt="FEB">
+    <img src="Makara/makara-feb.png" alt="FEB">
     <p>Fakultas Ekonomi dan Bisnis</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-fkm-1.png', 'makara-fkm-2.png'])">
-    <img src="makara/makara-fkm.png" alt="FKM">
+    <img src="Makara/makara-fkm.png" alt="FKM">
     <p>Fakultas Kesehatan Masyarakat</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-fia-1.png', 'makara-fia-2.png'])">
-    <img src="makara/fia.png" alt="FIA">
+    <img src="Makara/fia.png" alt="FIA">
     <p>Fakultas Ilmu Administrasi</p>
   </div>
 </section>
