benerin foto makara lagi hehe

--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
     <p>Fakultas Matematika dan Ipa</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-fk-1.png', 'makara-fk-2.png'])">
-    <img src="Makara/makara-fk.png" alt="FK">
+    <img src="Makara/fk.png" alt="FK">
     <p>Fakultas Kedokteran</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-fkg-1.png', 'makara-fkg-2.png'])">
@@ -747,7 +747,7 @@
     <p>Fakultas Kedokteran Gigi</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-ff-1.png', 'makara-ff-2.png'])">
-    <img src="Makara/makara-farmasi.png" alt="FARMASI">
+    <img src="Makara/farmasi2.png" alt="FARMASI">
     <p>Fakultas Farmasi</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-fik-1.png', 'makara-fik-2.png'])">
@@ -763,7 +763,7 @@
     <p>Fakultas Ekonomi dan Bisnis</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-fkm-1.png', 'makara-fkm-2.png'])">
-    <img src="Makara/makara-fkm.png" alt="FKM">
+    <img src="Makara/fkm2.png" alt="FKM">
     <p>Fakultas Kesehatan Masyarakat</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['makara-fia-1.png', 'makara-fia-2.png'])">
