--- a/coba coba coba.html
+++ b/coba coba coba.html
@@ -828,15 +828,15 @@
     
     <h1>FIND THE JURIG</h1>
     <section class="faculty-grid">
-      <div class="faculty-item" onclick="showPopup(['Hantu/JALAN CINTA-HANTU.png', 'makara-fib-2.png'])">
+      <div class="faculty-item" onclick="showPopup(['Hantu/JALAN CINTA-HANTU.png', 'Hantu/balairung-hantu.png', 'hantu/danau kenanga-hantu.png', 'hantu/stasiun ui-hantu.png', 'hantu/bikun-hantu.png', 'hantu/hutan ui-hantu.png'])">
         <img src="makara/makara-ui.png" alt="ui">
         <p>UNIVERSITAS INDONESIA</p>
       </div>
-      <div class="faculty-item" onclick="showPopup(['makara-vokasi-1.png', 'makara-vokasi-2.png'])">
+      <div class="faculty-item" onclick="showPopup(['hantu/COMING SOON.png'])">
         <img src="makara/makara-vokasi.png" alt="VOKASI">
         <p>Program Pendidikan Vokasi</p>
       </div>
-      <div class="faculty-item" onclick="showPopup(['makara-fmipa-1.png', 'makara-fmipa-2.png'])">
+      <div class="faculty-item" onclick="showPopup(['hantu/fib-hantu.png', 'hantu/fib-hantu(1).png'])">
         <img src="makara/makara-fib.png" alt="FIB">
         <p>Fakultas Ilmu Budaya</p>
       </div>
