--- a/coba coba coba.html
+++ b/coba coba coba.html
@@ -856,7 +856,7 @@
         <img src="makara/makara-fasilkom.png" alt="FASILKOM">
         <p>Fakultas Ilmu Komputer</p>
       </div>
-      <div class="faculty-item" onclick="showPopup(['makara-ft-1.png', 'makara-ft-2.png'])">
+      <div class="faculty-item" onclick="showPopup(['hantu/FMIPA (1).png', 'hantu/FMIPA (2).png', 'Hantu/FMIPA (3).png'])">
         <img src="makara/makara-fmipa.png" alt="FMIPA">
         <p>Fakultas Matematika dan Ipa</p>
       </div>
