di ubah huruf kapital

--- a/coba coba coba.html
+++ b/coba coba coba.html
@@ -828,19 +828,19 @@
     
     <h1>FIND THE JURIG</h1>
     <section class="faculty-grid">
-      <div class="faculty-item" onclick="showPopup(['Hantu/JALAN CINTA-HANTU.png', 'Hantu/balairung-hantu.png', 'hantu/danau kenanga-hantu.png', 'hantu/stasiun ui-hantu.png', 'hantu/bikun-hantu.png', 'hantu/hutan ui-hantu.png', 'hantu/menara air (1).png', 'hantu/teksas-hantu.png', 'hantu/fpsi, fisip, fib-hantu.png'])">
+      <div class="faculty-item" onclick="showPopup(['Hantu/JALAN CINTA-HANTU.png', 'Hantu/BALAIRUNG-HANTU.png', 'Hantu/DANAU KENANGA-HANTU.png', 'Hantu/STASIUN UI-HANTU.png', 'Hantu/BIKUN-HANTU.png', 'Hantu/HUTAN UI-hantu.png', 'Hantu/MENARA AIR (1).png', 'Hantu/teksas-HANTU.png', 'Hantu/FPSI, FISIP, FIB-hantu.png'])">
         <img src="makara/makara-ui.png" alt="ui">
         <p>UNIVERSITAS INDONESIA</p>
       </div>
-      <div class="faculty-item" onclick="showPopup(['hantu/COMING SOON.png'])">
+      <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
         <img src="makara/makara-vokasi.png" alt="VOKASI">
         <p>Program Pendidikan Vokasi</p>
       </div>
-      <div class="faculty-item" onclick="showPopup(['hantu/fib-hantu.png', 'hantu/fib-hantu(1).png'])">
+      <div class="faculty-item" onclick="showPopup(['Hantu/FIB-HANTU.png', 'Hantu/FIB-HANTU(1).png'])">
         <img src="makara/makara-fib.png" alt="FIB">
         <p>Fakultas Ilmu Budaya</p>
       </div>
-      <div class="faculty-item" onclick="showPopup(['hantu/COMING SOON.png'])">
+      <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
         <img src="makara/image 10.png" alt="FISIP">
         <p>Fakultas Ilmu Sosial dan Politik</p>
       </div>
@@ -848,31 +848,31 @@
         <img src="makara/makara-fh.png" alt="FH">
         <p>Fakultas Hukum</p>
       </div>
-      <div class="faculty-item" onclick="showPopup(['hantu/COMING SOON.png'])">
+      <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
         <img src="makara/makara-ft.png" alt="FAKULTAS TEKNIK">
         <p>Fakultas Teknik</p>
       </div>
-      <div class="faculty-item" onclick="showPopup(['hantu/COMING SOON.png'])">
+      <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
         <img src="makara/makara-fasilkom.png" alt="FASILKOM">
         <p>Fakultas Ilmu Komputer</p>
       </div>
-      <div class="faculty-item" onclick="showPopup(['hantu/FMIPA (1).png', 'hantu/FMIPA (2).png', 'Hantu/FMIPA (3).png'])">
+      <div class="faculty-item" onclick="showPopup(['Hantu/FMIPA (1).png', 'hantu/FMIPA (2).png', 'Hantu/FMIPA (3).png'])">
         <img src="makara/makara-fmipa.png" alt="FMIPA">
         <p>Fakultas Matematika dan Ipa</p>
       </div>
-      <div class="faculty-item" onclick="showPopup(['hantu/COMING SOON.png'])">
+      <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
         <img src="makara/fk.png" alt="FK">
         <p>Fakultas Kedokteran</p>
       </div>
-      <div class="faculty-item" onclick="showPopup(['hantu/COMING SOON.png'])">
+      <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
         <img src="makara/fkg.png" alt="FKG">
         <p>Fakultas Kedokteran Gigi</p>
       </div>
-      <div class="faculty-item" onclick="showPopup(['hantu/COMING SOON.png'])">
+      <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
         <img src="makara/farmasi2.png" alt="FARMASI">
         <p>Fakultas Farmasi</p>
       </div>
-      <div class="faculty-item" onclick="showPopup(['hantu/COMING SOON.png'])">
+      <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
         <img src="makara/makara-ui-fik.png" alt="FIK">
         <p>Fakultas Ilmu Keperawatan</p>
       </div>
@@ -880,15 +880,15 @@
         <img src="makara/makara-fpsi.png" alt="FPSI">
         <p>Fakultas Psikologi</p>
       </div>
-      <div class="faculty-item" onclick="showPopup(['hantu/COMING SOON.png'])">
+      <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
         <img src="makara/makara-feb.png" alt="FEB">
         <p>Fakultas Ekonomi dan Bisnis</p>
       </div>
-      <div class="faculty-item" onclick="showPopup(['hantu/COMING SOON.png'])">
+      <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
         <img src="makara/farmasi2.png" alt="FKM">
         <p>Fakultas Kesehatan Masyarakat</p>
       </div>
-      <div class="faculty-item" onclick="showPopup(['hantu/COMING SOON.png'])">
+      <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
         <img src="makara/fia.png" alt="FIA">
         <p>Fakultas Ilmu Administrasi</p>
       </div>
